# pp_labs

lab_1/: multiply.cpp  report.md  statistics.txt  stats.py
lab_1/results/: 100_1.txt  100_2.txt  1100_1.txt  1100_2.txt  300_1.txt  300_2.txt  500_1.txt  500_2.txt  700_1.txt  700_2.txt  900_1.txt  900_2.txt  result_100.txt  result_300.txt  result_500.txt  result_700.txt
lab_2/: multiply.cpp  statistics.txt  stats.py
lab_2/results/: 100_1.txt  100_2.txt  1100_1.txt  1100_2.txt  300_1.txt  300_2.txt  500_1.txt  500_2.txt  700_1.txt  700_2.txt  900_1.txt  900_2.txt  result_100_4.txt  result_300_2.txt  result_500_1.txt  result_700_4.txt
lab_3/: CMakeLists.txt  korolev.txt  multiply.cpp  report.md  statistics.txt  verify.py
lab_3/results/: 100_1.txt  100_2.txt  1100_1.txt  1100_2.txt  300_1.txt  300_2.txt  500_1.txt  500_2.txt  700_1.txt  700_2.txt  900_1.txt  900_2.txt  result_100_2.txt  result_100_4.txt  result_100_6.txt  result_300_2.txt  result_300_4.txt  result_300_6.txt  result_500_2.txt  result_500_4.txt  result_500_6.txt  result_700_2.txt  result_700_4.txt  result_700_6.txt
